# Liminant

./: Enlightenment-NEO.md  Enlightenment-qol_1.md  Enlightenment.md  Plan A.md  Plan B.md  Plan NEO.md  Plan omni.md  Prompt.md  qol_1.md  start-backend.sh  start-frontend.sh
liminant-backend/: .env  intro.md  pyproject.toml  requirements.txt  test.txt
liminant-backend/app/: config.py  main.py
liminant-backend/app/agents/: __init__.py  base.py  coder.py  context_parser.py  coordinator.py  librarian.py  scribe.py
liminant-backend/app/api/v1/: artifacts.py  knowledge.py  preflight.py  sessions.py  timeline.py  tools.py  vibesense.py
liminant-backend/app/models/: __init__.py  artifact.py  knowledge.py  message.py  session.py  timeline.py
liminant-backend/app/services/: __init__.py  artifact_storage.py  constraint_pipeline.py  knowledge_base.py  llm_driver.py  mcp_bridge.py  pipeline_event_bus.py  preflight_service.py  reasoning_bus.py  reasoning_context.py  session_manager.py  tool_executor.py  vibe_sense.py
liminant-backend/app/utils/: __init__.py  artifact_store.py  json_storage.py
liminant-backend/data/sessions/: sess_0717a1340615.json  sess_0ce0ff36d702.json  sess_11fd9fd715eb.json  sess_154a3c25193e.json  sess_2e3cc95a6fa5.json  sess_4f24c8eabc2e.json  sess_5836df2fee01.json  sess_70f5ace57f5c.json  sess_a6c0b5eec235.json  sess_c6b62ab1a71b.json  sess_ce5f7dc7e269.json  sess_d09047143e86.json
liminant-frontend/: package-lock.json  package.json
liminant-frontend/src/app/: layout.tsx  page.tsx
liminant-frontend/src/lib/: api.ts  store.ts
(+15 files in other folders)
