[project]
name = "liminant-backend"
version = "0.1.0"
description = "Liminal Vibe Engineering Platform - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "python-dotenv==1.0.1",
    "openai==1.12.0",
    "aiofiles==23.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
